--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,6 +6,15 @@ nav{
     );
 }
 
+
+.gradient{
+  background-image:
+    linear-gradient(
+      to right, 
+      #FF4536, #f06d06
+    );
+}
+
 body{
   background-image:
     linear-gradient(
@@ -14,31 +23,54 @@ body{
     );
 }
 
+label{
+  color:black !important;
+}
+
+.input-field input {
+  border-bottom: 1px solid black;
+  box-shadow: 0 1px 0 0 black;
+}
+
 .input-field input[type=text]:focus + label {
-  color: green;
+  color: black;
 }
 
 .input-field input[type=text]:focus {
-  border-bottom: 1px solid green;
-  box-shadow: 0 1px 0 0 green;
+  border-bottom: 1px solid black;
+  box-shadow: 0 1px 0 0 black;
 }
 
 .input-field input[type=password]:focus + label {
-  color: green;
+  color: black;
 }
 
 .input-field input[type=password]:focus {
-  border-bottom: 1px solid green;
-  box-shadow: 0 1px 0 0 green;
+  border-bottom: 1px solid black;
+  box-shadow: 0 1px 0 0 black;
 }
 
 .input-field input[type=email]:focus + label {
-  color: green;
+  color: black;
 }
 
 .input-field input[type=email]:focus {
-  border-bottom: 1px solid green;
-  box-shadow: 0 1px 0 0 green;
+  border-bottom: 1px solid black;
+  box-shadow: 0 1px 0 0 black;
+}
+
+textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid black;
+  box-shadow: 0 1px 0 0 black;
+}
+
+textarea.materialize-textarea:not([readonly]) {
+  border-bottom: 1px solid black;
+  box-shadow: 0 1px 0 0 black;
+}
+
+.active{
+  color:black !important;
 }
 
 .card .card-image img{
@@ -50,5 +82,5 @@ body{
 }
 
 button:focus{
-  background-color: white;
+  background-color: black;
 }
